--- a/src/main/resources/output/generated-workflow.yml
+++ b/src/main/resources/output/generated-workflow.yml
@@ -1,11 +1,11 @@
 name: Pipeline
 
 on:
-  push:
+  PUSH:
     branches:
       - main
       - develop
-  pull_request:
+  PULL_REQUEST:
     branches:
       - main
 
